# PruebaGitKraken

./: CMakeLists.txt  ListaDoble.cpp  ListaDoble.h  ListaSimple.cpp  ListaSimple.h  LstaCircular.cpp  LstaCircular.h  README.md  VentanaPrincipal.cpp  VentanaPrincipal.h  main.cpp
